--- a/.github/workflows/linux-cpu-x64-build.yml
+++ b/.github/workflows/linux-cpu-x64-build.yml
@@ -72,7 +72,8 @@ jobs:
 
       - name: Build with Python
         run: |
-          python3 build.py --parallel --config=Debug --build_csharp
+          python -m pip install requests
+          python3 build.py --parallel --config=Debug --build_csharp --cmake_generator "Ninja"
 
       - name: Install the python wheel and test dependencies
         run: |
@@ -108,7 +109,7 @@ jobs:
       - name: Build the Java API and Run the Java Tests
         run: |
           set -e -x
-          python3 build.py --config=Release --build_dir build/Linux/Debug --build_java --parallel --cmake_generator "Ninja"
+          python3 build.py --config=Debug --build_dir build/Linux/Debug --build_java --parallel --cmake_generator "Ninja"
 
       - name: Run tests
         run: |
