--- a/.github/workflows/win-cuda-x64-build.yml
+++ b/.github/workflows/win-cuda-x64-build.yml
@@ -67,6 +67,7 @@ jobs:
 
     - name: Build with Python
       run: |
+        python -m pip install requests
         python build.py --cuda_home=${{ env.cuda_dir }}\\v${{ env.cuda_version }} --parallel --config=Debug
 
     - name: Install the Python Wheel and Test Dependencies
