--- a/.github/workflows/win-directml-x64-build.yml
+++ b/.github/workflows/win-directml-x64-build.yml
@@ -80,6 +80,7 @@ jobs:
 
     - name: Build with Python
       run: |
+        python -m pip install requests
         python build.py --parallel --config=Release --use_dml
 
     - name: Install the Python Wheel and Test Dependencies
