--- a/.github/workflows/win-cpu-arm64-build.yml
+++ b/.github/workflows/win-cpu-arm64-build.yml
@@ -55,6 +55,7 @@ jobs:
     - name: Build with Python
       run: |
         python -m pip install requests
+        python -m pip install wheel
         python build.py --parallel --config=Release --build_csharp
 
     - name: Build the C# API and Run the C# Tests
