--- a/.github/workflows/win-cpu-x64-build.yml
+++ b/.github/workflows/win-cpu-x64-build.yml
@@ -79,6 +79,7 @@ jobs:
     - name: Build with Python
       run: |
         python3 -m pip install requests
+        python3 -m pip install wheel
         python3 build.py --parallel --config=Debug --build_csharp --build_java
 
     - name: Install the python wheel and test dependencies
