--- a/.github/workflows/win-cpu-arm64-build.yml
+++ b/.github/workflows/win-cpu-arm64-build.yml
@@ -56,7 +56,7 @@ jobs:
       run: |
         python -m pip install requests
         python -m pip install wheel
-        python build.py --parallel --config=Release --build_csharp
+        python build.py --parallel --config=Release
 
     - name: Build the C# API and Run the C# Tests
       run: |
