--- a/.github/workflows/linux-cpu-x64-build.yml
+++ b/.github/workflows/linux-cpu-x64-build.yml
@@ -73,7 +73,7 @@ jobs:
       - name: Build with Python
         run: |
           python -m pip install requests
-          python3 build.py --parallel --config=Debug --build_csharp --cmake_generator "Ninja"
+          python3 build.py --parallel --config=Debug
 
       - name: Install the python wheel and test dependencies
         run: |
@@ -109,7 +109,7 @@ jobs:
       - name: Build the Java API and Run the Java Tests
         run: |
           set -e -x
-          python3 build.py --config=Debug --build_dir build/Linux/Debug --build_java --parallel --cmake_generator "Ninja"
+          python3 build.py --config=Debug --build_dir build/Linux/Debug --build_java --parallel
 
       - name: Run tests
         run: |
