--- a/.github/workflows/mac-cpu-arm64-build.yml
+++ b/.github/workflows/mac-cpu-arm64-build.yml
@@ -56,7 +56,7 @@ jobs:
         run: |
           python3 -m pip install requests
           python3 -m pip install wheel
-          python3 build.py --parallel --config=Release --build_java --cmake_generator "Unix Makefiles"
+          python3 build.py --parallel --config=Release --cmake_generator "Unix Makefiles"
 
       - name: Install the python wheel and test dependencies
         run: |
@@ -92,6 +92,13 @@ jobs:
         run: |
           export ORTGENAI_LOG_ORT_LIB=1
           cd test/csharp
+          dotnet test /p:Configuration=Release /p:NativeBuildOutputDir="../../build/MacOSX/Release" --verbosity normal
+
+      - name: Build the Java API and Run the Java Tests
+        run: |
+          set -e -x
+          source genai-macos-venv/bin/activate
+          python3 build.py --config=Release --build_dir build/cpu/osx-arm64 --build_java --parallel --cmake_generator "Unix Makefiles"
           dotnet test /p:Configuration=Release /p:NativeBuildOutputDir="../../build/MacOSX/Release" --verbosity normal
 
       - name: Run tests
