--- a/tools/ci_build/github/linux/docker/manylinux/Dockerfile.manylinux2_28_cuda_12.2
+++ b/tools/ci_build/github/linux/docker/manylinux/Dockerfile.manylinux2_28_cuda_12.2
@@ -1,20 +1,18 @@
-ARG BASEIMAGE=onnxruntimebuildcache.azurecr.io/internal/azureml/onnxruntime/build/cuda12_x64_ubi8_gcc12:20240610.1
+ARG BASEIMAGE=onnxruntimebuildcache.azurecr.io/internal/azureml/onnxruntime/build/cuda12_x64_ubi8_gcc12_dotnet:20241120.3
 
 FROM $BASEIMAGE
-ADD scripts /tmp/scripts
 
-RUN if [ "$(echo $CUDA_VERSION | cut -d. -f1)" -ge 12 ]; then \
-    echo "Using GCC 12 because CUDA version is greater than or equal to 12"; \
-    cd /tmp/scripts && /tmp/scripts/install_centos_gcc12.sh && /tmp/scripts/install_deps.sh && rm -rf /tmp/scripts; \
-else \
-    echo "Using default gcc because CUDA version is less than 12"; \
-    cd /tmp/scripts && /tmp/scripts/install_centos.sh && /tmp/scripts/install_deps.sh && rm -rf /tmp/scripts; \
-fi
+ENV LANG=en_US.UTF-8
+ENV LC_ALL=en_US.UTF-8
+
+ENV CUDAHOSTCXX=/opt/rh/gcc-toolset-12/root/usr/bin/g++
+ADD scripts /tmp/scripts
+RUN sed -i 's/enabled\s*=\s*1/enabled = 1\nexclude=dotnet* aspnet* netstandard*/g' /etc/yum.repos.d/ubi.repo && \
+	cd /tmp/scripts && /tmp/scripts/install_deps.sh && rm -rf /tmp/scripts
+ENV PATH=/usr/lib/jvm/msopenjdk-17/bin:$PATH
+ENV JAVA_HOME=/usr/lib/jvm/msopenjdk-17
 ARG BUILD_UID=1001
 ARG BUILD_USER=onnxruntimedev
 RUN adduser --uid $BUILD_UID $BUILD_USER
 WORKDIR /home/$BUILD_USER
 USER $BUILD_USER
-ENV PATH /usr/local/dotnet:$PATH
-ENV CUDAHOSTCXX /opt/rh/gcc-toolset-12/root/usr/bin/g++
-ENV CUDA_MODULE_LOADING "LAZY"
