--- a/.github/workflows/win-cuda-x64-build.yml
+++ b/.github/workflows/win-cuda-x64-build.yml
@@ -59,7 +59,7 @@ jobs:
       run: |
         mkdir ort/lib
         move ${{ env.ORT_PACKAGE_NAME }}/buildTransitive/native/include ort/
-        move ${{ env.ORT_PACKAGE_NAME }}/runtimes/win-x64/native/* ort/lib/    
+        move ${{ env.ORT_PACKAGE_NAME }}/runtimes/win-x64/native/* ort/lib/
 
     - name: Configure CMake
       run: |
@@ -92,18 +92,18 @@ jobs:
       if: always()
       continue-on-error: true
       run: |
-        
+
         Get-ChildItem -Path $env:GITHUB_WORKSPACE\$env:binaryDir -Recurse
 
     - name: Build the C# API and Run the C# Tests
       run: |
         $env:PATH = "${{ env.cuda_dir }}\\v${{ env.cuda_version }}\\bin;" + $env:PATH
         cd test\csharp
-        dotnet test /p:Configuration=release /p:NativeBuildOutputDir="$env:GITHUB_WORKSPACE\$env:binaryDir\Release" /p:OrtLibDir="$env:GITHUB_WORKSPACE\ort\lib"
+        dotnet test /p:Configuration=release /p:NativeBuildOutputDir="$env:GITHUB_WORKSPACE\$env:binaryDir\Release" /p:OrtLibDir="$env:GITHUB_WORKSPACE\ort\lib" --verbosity normal
 
     - name: Prepend CUDA to PATH and Run tests
       run: |
-        $env:PATH = "${{ env.cuda_dir }}\\v${{ env.cuda_version }}\\bin;" + $env:PATH 
-        echo "Current PATH variable is: $env:PATH" 
+        $env:PATH = "${{ env.cuda_dir }}\\v${{ env.cuda_version }}\\bin;" + $env:PATH
+        echo "Current PATH variable is: $env:PATH"
         copy $env:GITHUB_WORKSPACE\ort\lib\* .\$env:binaryDir\Release
         & .\$env:binaryDir\Release\unit_tests.exe
