--- a/.github/workflows/mac-cpu-arm64-build.yml
+++ b/.github/workflows/mac-cpu-arm64-build.yml
@@ -92,18 +92,18 @@ jobs:
         run: |
           export ORTGENAI_LOG_ORT_LIB=1
           cd test/csharp
-          dotnet test /p:Configuration=Release /p:NativeBuildOutputDir="../../build/MacOS/Release" --verbosity normal
+          dotnet test /p:Configuration=Release /p:NativeBuildOutputDir="../../build/MacOS/Release/Release" --verbosity normal
 
       - name: Build the Java API and Run the Java Tests
         run: |
           set -e -x
           source genai-macos-venv/bin/activate
           python3 build.py --config=Release --build_java --parallel --cmake_generator "Unix Makefiles"
-          dotnet test /p:Configuration=Release /p:NativeBuildOutputDir="../../build/MacOS/Release" --verbosity normal
+          dotnet test /p:Configuration=Release /p:NativeBuildOutputDir="../../build/MacOS/Release/Release" --verbosity normal
 
       - name: Run tests
         run: |
           set -e -x
           export ORTGENAI_LOG_ORT_LIB=1
-          export DYLD_LIBRARY_PATH=$DYLD_LIBRARY_PATH:$GITHUB_WORKSPACE/build/MacOS/Release
-          ./build/MacOS/Release/unit_tests
+          export DYLD_LIBRARY_PATH=$DYLD_LIBRARY_PATH:$GITHUB_WORKSPACE/build/MacOS/Release/Release
+          ./build/MacOS/Release/Release/unit_tests
