--- a/.github/workflows/doxygen-build.yml
+++ b/.github/workflows/doxygen-build.yml
@@ -37,7 +37,16 @@ jobs:
           cd src/java/
           ../../doxygen-1.9.8/bin/doxygen Doxyfile_java.cfg
 
+      - name: Run Objective-C doxygen
+        run: |
+          cd src/objectivec/
+          ../../doxygen-1.9.8/bin/doxygen Doxyfile_objc.cfg
+
       - name: Run API diff
         run: |
           python -m pip install -U jsonpickle
-          python ./tools/ci_build/validate_doxygen_xml.py --cxx-output-dir ./src/cxx_dox  --java-output-dir ./src/java/java_dox --csharp-output-dir ./src/csharp/csharp_dox
+          python ./tools/ci_build/validate_doxygen_xml.py \
+            --cxx-output-dir ./src/cxx_dox \
+            --java-output-dir ./src/java/java_dox \
+            --csharp-output-dir ./src/csharp/csharp_dox \
+            --objc-output-dir ./src/objectivec/objc_dox
