--- a/.github/workflows/ios-build.yml
+++ b/.github/workflows/ios-build.yml
@@ -32,4 +32,10 @@ jobs:
         run: |
           set -e -x
           source genai-macos-venv/bin/activate
-          python3 build.py --ios --parallel --apple_sysroot iphonesimulator --osx_arch arm64 --apple_deploy_target 15.4 --cmake_generator 'Xcode'
+          python3 build.py --ios \
+              --parallel \
+              --apple_sysroot iphonesimulator \
+              --osx_arch arm64 \
+              --apple_deploy_target 15.4 \
+              --cmake_generator 'Xcode' \
+              --build_dir build_iphonesimulator
