--- a/.github/workflows/ios-build.yml
+++ b/.github/workflows/ios-build.yml
@@ -10,7 +10,7 @@ concurrency:
   group: ${{ github.workflow }}-${{ github.head_ref || github.run_id }}
   cancel-in-progress: true
 jobs:
-  mac-cpu-arm64-build:
+  iphonesimulator_arm64-build:
     runs-on: macos-latest # arm64
     steps:
       - name: Checkout OnnxRuntime GenAI repo
