--- a/.pipelines/stages/jobs/steps/capi-win-step.yml
+++ b/.pipelines/stages/jobs/steps/capi-win-step.yml
@@ -50,7 +50,8 @@ steps:
     $exePath = "$env:TEMP\rustup-init.exe"
     (New-Object Net.WebClient).DownloadFile('https://static.rust-lang.org/rustup/dist/x86_64-pc-windows-msvc/rustup-init.exe', $exePath)
     & $exePath -y --default-toolchain=1.82.0
-    Add-Content $env:GITHUB_PATH "$env:USERPROFILE\.cargo\bin"
+    $env:Path = "$env:USERPROFILE\.cargo\bin;$env:Path"
+    Write-Host $env:Path
   displayName: 'Install Rust Toolchain'
 
 - powershell: |
