--- a/.pipelines/stages/jobs/steps/capi-macos-step.yml
+++ b/.pipelines/stages/jobs/steps/capi-macos-step.yml
@@ -29,6 +29,18 @@ steps:
     echo "build_config=${{ parameters.build_config }}"
   displayName: 'Print Parameters'
 
+- bash: |
+    rustup toolchain install 1.82.0-x86_64-apple-darwin
+    rustup default 1.82.0-x86_64-apple-darwin
+
+    if ("$(arch)" -eq "arm64") {
+        rustup target add --toolchain 1.82.0-x86_64-apple-darwin aarch64-apple-darwin
+    }
+    else {
+        rustup target add --toolchain 1.82.0-x86_64-apple-darwin x86_64-apple-darwin
+    }
+  displayName: 'Install Rust Toolchain'
+
 - powershell: |
     $env:MACOSX_DEPLOYMENT_TARGET = "12.0" # Monterey
     cmake --preset macos_$(arch)_$(ep)_$(build_config)
