--- a/.github/workflows/android-build.yml
+++ b/.github/workflows/android-build.yml
@@ -41,13 +41,26 @@ jobs:
           gradle-version: '8.6'
 
       # Check the NDK that we're using
-      - name: Check Android NDKs
+      - name: Check Android SDK and NDK
         run: |
           set -e -x
           uname -m
+          echo "ANDROID_HOME=$ANDROID_HOME"
+          ls -l $ANDROID_HOME
+
+          echo "ANDROID_SDK_ROOT=$ANDROID_SDK_ROOT"
+
           echo "ANDROID_NDK_HOME=$ANDROID_NDK_HOME"
           echo "ANDROID_NDK_LATEST_HOME=$ANDROID_NDK_LATEST_HOME"
           ls -l $ANDROID_HOME/ndk
+
+      - name: Check if emulator are installed and install if needed
+        run: |
+          if [ -d "${ANDROID_SDK_ROOT}/emulator" ] then
+              echo "${ANDROID_SDK_ROOT}/emulator exists"
+          else
+              ${ANDROID_SDK_ROOT}/cmdline-tools/latest/bin/sdkmanager --install "emulator"
+          fi
 
       # Needed for linux
       - name: Install jq
