--- a/.github/workflows/android-build.yml
+++ b/.github/workflows/android-build.yml
@@ -40,7 +40,7 @@ jobs:
         with:
           gradle-version: '8.6'
 
-      # Check the NDK that we're using
+      # Check the Android SDK and NDK that we're using
       - name: Check Android SDK and NDK
         run: |
           set -e -x
@@ -54,9 +54,9 @@ jobs:
           echo "ANDROID_NDK_LATEST_HOME=$ANDROID_NDK_LATEST_HOME"
           ls -l $ANDROID_HOME/ndk
 
-      - name: Check if emulator are installed and install if needed
+      - name: Check if emulator is installed and install it if needed
         run: |
-          if [ -d "${ANDROID_SDK_ROOT}/emulator" ] then
+          if [ -d "${ANDROID_SDK_ROOT}/emulator" ]; then
               echo "${ANDROID_SDK_ROOT}/emulator exists"
           else
               ${ANDROID_SDK_ROOT}/cmdline-tools/latest/bin/sdkmanager --install "emulator"
