--- a/.github/workflows/ios-build.yml
+++ b/.github/workflows/ios-build.yml
@@ -3,8 +3,8 @@ on:
   workflow_dispatch:
   push:
     branches:
-      - main
-      - rel-*
+    - main
+    - rel-*
   pull_request:
 concurrency:
   group: ${{ github.workflow }}-${{ github.head_ref || github.run_id }}
@@ -20,7 +20,7 @@ jobs:
 
       - uses: actions/setup-python@v5
         with:
-          python-version: "3.12.x"
+          python-version: '3.12.x'
 
       - name: Install the python wheel and dependencies
         run: |
@@ -28,23 +28,15 @@ jobs:
           source genai-macos-venv/bin/activate
           python3 -m pip install requests
 
-      - name: Install Rust Toolchain
-        uses: dtolnay/rust-toolchain@1.82.0
-
-      - name: Install Rust target
-        run: |
-          rustup target add aarch64-apple-ios-sim
-
       - name: Run iOS Build
         run: |
           set -e -x
           source genai-macos-venv/bin/activate
-          export PATH=/Library/Developer/CommandLineTools/SDKs/MacOSX.sdk/usr/lib:$PATH
-          export LIBRARY_PATH="$LIBRARY_PATH:/Library/Developer/CommandLineTools/SDKs/MacOSX.sdk/usr/lib" # Needed for Rust compilation and linking
           python3 build.py --ios \
               --parallel \
               --apple_sysroot iphonesimulator \
               --osx_arch arm64 \
               --apple_deploy_target 15.4 \
               --cmake_generator 'Xcode' \
-              --build_dir build_iphonesimulator
+              --build_dir build_iphonesimulator \
+              --use_guidance=false
