--- a/.github/workflows/ios-build.yml
+++ b/.github/workflows/ios-build.yml
@@ -38,5 +38,4 @@ jobs:
               --osx_arch arm64 \
               --apple_deploy_target 15.4 \
               --cmake_generator 'Xcode' \
-              --build_dir build_iphonesimulator \
-              --use_guidance=false
+              --build_dir build_iphonesimulator
