build and test with use_guidance

--- a/.github/workflows/mac-cpu-arm64-build.yml
+++ b/.github/workflows/mac-cpu-arm64-build.yml
@@ -61,7 +61,7 @@ jobs:
 
       - name: Build with CMake
         run: |
-          cmake --build --preset macos_arm64_cpu_release --parallel
+          cmake --build --preset macos_arm64_cpu_release --parallel -DUSE_GUIDANCE=ON
         continue-on-error: false
 
       - name: Install the python wheel and test dependencies
