--- a/.github/workflows/win-cpu-x64-build.yml
+++ b/.github/workflows/win-cpu-x64-build.yml
@@ -85,11 +85,11 @@ jobs:
 
     - name: Configure CMake
       run: |
-        cmake --preset windows_x64_cpu_release
+        cmake --preset windows_x64_cpu_release -DUSE_GUIDANCE=ON
 
     - name: Build with CMake
       run: |
-        cmake --build --preset windows_x64_cpu_release --parallel
+        cmake --build --preset windows_x64_cpu_release --parallel -DUSE_GUIDANCE=ON
 
     - name: Install the python wheel and test dependencies
       run: |
