--- a/examples/c/CMakeLists.txt
+++ b/examples/c/CMakeLists.txt
@@ -6,7 +6,8 @@ set(CMAKE_CXX_STANDARD 20)
 option(USE_CUDA "Build with CUDA support" OFF)
 option(USE_CXX "Invoke the C++ example" ON)
 option(PHI3 "Build the Phi example" OFF)
-option(PHI3V "Build the Phi3v example" OFF)
+option(PHI3V "Build the Phi-3 vision example" OFF)
+option(PHI4-MM "Build the Phi-4 mm example" OFF)
 option(WHISPER "Build the Whisper example" OFF)
 
 if(USE_CXX)
@@ -61,6 +62,11 @@ endif()
 if(PHI3V)
   add_executable(phi3v ${CMAKE_SOURCE_DIR}/src/phi3v.cpp)
   prepare_executable(phi3v)
+endif()
+
+if(PHI4-MM)
+  add_executable(phi4-mm ${CMAKE_SOURCE_DIR}/src/phi4-mm.cpp)
+  prepare_executable(phi4-mm)
 endif()
 
 if(WHISPER)
