--- a/.github/workflows/win-directml-x64-build.yml
+++ b/.github/workflows/win-directml-x64-build.yml
@@ -93,6 +93,14 @@ jobs:
         python -m pip install -r test\python\directml\ort\requirements.txt
         python -m pip install (Get-ChildItem ("$env:binaryDir\wheel\*.whl")) --no-deps
 
+    - name: Use Dummy HuggingFace Token
+      run: |
+        Add-Content -Path $env:GITHUB_ENV -Value "HF_TOKEN=12345"
+
+    - name: Run the Python Tests
+      run: |
+        python test/python/test_onnxruntime_genai.py --cwd "test\python" --test_models "test\test_models" --e2e
+
     - name: Verify Build Artifacts
       if: always()
       continue-on-error: true
