split C/C++ into two files

--- a/examples/c/CMakeLists.txt
+++ b/examples/c/CMakeLists.txt
@@ -54,6 +54,16 @@ function(prepare_executable executable)
 endfunction()
 
 if(PHI3)
+  if(USE_CXX)
+    add_executable(phi3 ${CMAKE_SOURCE_DIR}/src/cpp/phi3.cpp)
+    prepare_executable(phi3)
+  else()
+    add_executable(phi3 ${CMAKE_SOURCE_DIR}/src/c/phi3.cpp)
+    prepare_executable(phi3)
+  endif()
+endif()
+
+if(PHI3)
   add_executable(phi3 ${CMAKE_SOURCE_DIR}/src/phi3.cpp)
   prepare_executable(phi3)
 endif()
