split phi3v example

--- a/examples/c/CMakeLists.txt
+++ b/examples/c/CMakeLists.txt
@@ -64,8 +64,13 @@ if(PHI3)
 endif()
 
 if(PHI3V)
-  add_executable(phi3v ${CMAKE_SOURCE_DIR}/src/phi3v.cpp)
-  prepare_executable(phi3v)
+  if(USE_CXX)
+    add_executable(phi3v ${CMAKE_SOURCE_DIR}/src/cpp/phi3v.cpp)
+    prepare_executable(phi3v)
+  else()
+    add_executable(phi3v ${CMAKE_SOURCE_DIR}/src/c/phi3v.cpp)
+    prepare_executable(phi3v)
+  endif()
 endif()
 
 if(WHISPER)
