Initial commit of AIX port

--- a/examples/c/CMakeLists.txt
+++ b/examples/c/CMakeLists.txt
@@ -27,8 +27,13 @@ elseif(APPLE)
   set(ONNXRUNTIME_GENAI_LIB "libonnxruntime-genai.dylib")
   set(ONNXRUNTIME_GENAI_DEPENDENCY "*.dylib")
 else()
-  set(ONNXRUNTIME_GENAI_LIB "libonnxruntime-genai.so")
-  set(ONNXRUNTIME_GENAI_DEPENDENCY "*.so")
+  if (CMAKE_SYSTEM_NAME MATCHES "AIX")
+    set(ONNXRUNTIME_GENAI_LIB "libonnxruntime-genai.a")
+    set(ONNXRUNTIME_GENAI_DEPENDENCY "*.a")
+  else()
+    set(ONNXRUNTIME_GENAI_LIB "libonnxruntime-genai.so")
+    set(ONNXRUNTIME_GENAI_DEPENDENCY "*.so")
+  endif()
 endif()
 
 file(GLOB ort_genai_libs "${CMAKE_SOURCE_DIR}/lib/${ONNXRUNTIME_GENAI_DEPENDENCY}")
