--- a/examples/c/CMakeLists.txt
+++ b/examples/c/CMakeLists.txt
@@ -26,13 +26,12 @@ if(WIN32)
 elseif(APPLE)
   set(ONNXRUNTIME_GENAI_LIB "libonnxruntime-genai.dylib")
   set(ONNXRUNTIME_GENAI_DEPENDENCY "*.dylib")
+elseif(CMAKE_SYSTEM_NAME MATCHES "AIX")
+  set(ONNXRUNTIME_GENAI_LIB "libonnxruntime-genai.a")
+  set(ONNXRUNTIME_GENAI_DEPENDENCY "*.a")
 else()
-  if (CMAKE_SYSTEM_NAME MATCHES "AIX")
-    set(ONNXRUNTIME_GENAI_LIB "libonnxruntime-genai.a")
-    set(ONNXRUNTIME_GENAI_DEPENDENCY "*.a")
-  else()
-    set(ONNXRUNTIME_GENAI_LIB "libonnxruntime-genai.so")
-    set(ONNXRUNTIME_GENAI_DEPENDENCY "*.so")
+  set(ONNXRUNTIME_GENAI_LIB "libonnxruntime-genai.so")
+  set(ONNXRUNTIME_GENAI_DEPENDENCY "*.so")
   endif()
 endif()
 
