--- a/examples/c/CMakeLists.txt
+++ b/examples/c/CMakeLists.txt
@@ -6,6 +6,7 @@ set(CMAKE_CXX_STANDARD 20)
 option(USE_CUDA "Build with CUDA support" OFF)
 option(USE_CXX "Invoke the C++ example" ON)
 option(PHI3 "Build the Phi example" OFF)
+option(PHI3_QA "Build the Phi Q&A example without memory" OFF)
 option(PHI3V "Build the Phi3v example" OFF)
 option(WHISPER "Build the Whisper example" OFF)
 
@@ -62,6 +63,11 @@ endif()
 if(PHI3)
   add_executable(phi3 ${EXAMPLES_SOURCE_DIR}/phi3.cpp)
   prepare_executable(phi3)
+endif()
+
+if(PHI3_QA)
+  add_executable(phi3_qa ${EXAMPLES_SOURCE_DIR}/phi3_qa.cpp)
+  prepare_executable(phi3_qa)
 endif()
 
 if(PHI3V)
