--- a/examples/c/CMakeLists.txt
+++ b/examples/c/CMakeLists.txt
@@ -54,28 +54,24 @@ function(prepare_executable executable)
   endforeach()
 endfunction()
 
-if(USE_CXX)
-  set(EXAMPLES_SOURCE_DIR ${CMAKE_SOURCE_DIR}/src/cpp)
-else()
-  set(EXAMPLES_SOURCE_DIR ${CMAKE_SOURCE_DIR}/src/c)
-endif()
+set(EXAMPLES_SOURCE_DIR ${CMAKE_SOURCE_DIR}/src)
 
 if(PHI3)
-  add_executable(phi3 ${EXAMPLES_SOURCE_DIR}/phi3.cpp  ${EXAMPLES_SOURCE_DIR}/../common.cpp)
+  add_executable(phi3 ${EXAMPLES_SOURCE_DIR}/phi3.cpp  ${EXAMPLES_SOURCE_DIR}/common.cpp)
   prepare_executable(phi3)
 endif()
 
 if(PHI3_QA)
-  add_executable(phi3_qa ${EXAMPLES_SOURCE_DIR}/phi3_qa.cpp ${EXAMPLES_SOURCE_DIR}/../common.cpp)
+  add_executable(phi3_qa ${EXAMPLES_SOURCE_DIR}/phi3_qa.cpp ${EXAMPLES_SOURCE_DIR}/common.cpp)
   prepare_executable(phi3_qa)
 endif()
 
 if(PHI3V)
-  add_executable(phi3v ${EXAMPLES_SOURCE_DIR}/phi3v.cpp ${EXAMPLES_SOURCE_DIR}/../common.cpp)
+  add_executable(phi3v ${EXAMPLES_SOURCE_DIR}/phi3v.cpp ${EXAMPLES_SOURCE_DIR}/common.cpp)
   prepare_executable(phi3v)
 endif()
 
 if(WHISPER)
-  add_executable(whisper ${CMAKE_SOURCE_DIR}/src/whisper.cpp ${EXAMPLES_SOURCE_DIR}/../common.cpp)
+  add_executable(whisper ${CMAKE_SOURCE_DIR}/src/whisper.cpp ${EXAMPLES_SOURCE_DIR}/common.cpp)
   prepare_executable(whisper)
 endif()
