--- a/.github/workflows/android-build.yml
+++ b/.github/workflows/android-build.yml
@@ -16,7 +16,7 @@ env:
   # ANDROID_ABI: "arm64-v8a"
   ANDROID_ABI: "x86_64"
   ANDROID_NDK_VERSION: "27.2.12479018"  # LTS version
-  ANDROID_AVD_HOME: ${{ runner.temp }}
+  ANDROID_AVD_HOME: "${RUNNER_TEMP}"
 jobs:
   android_x64:
     # Note: linux is the only good option for the Android emulator currently.
