--- a/.github/workflows/android-build.yml
+++ b/.github/workflows/android-build.yml
@@ -16,7 +16,6 @@ env:
   # ANDROID_ABI: "arm64-v8a"
   ANDROID_ABI: "x86_64"
   ANDROID_NDK_VERSION: "27.2.12479018"  # LTS version
-  ANDROID_AVD_HOME: "${RUNNER_TEMP}"
 jobs:
   android_x64:
     # Note: linux is the only good option for the Android emulator currently.
@@ -54,6 +53,8 @@ jobs:
           "${ANDROID_SDK_ROOT}/cmdline-tools/latest/bin/sdkmanager" --install "ndk;${{ env.ANDROID_NDK_VERSION }}"
 
           echo "ANDROID_NDK_HOME=${ANDROID_SDK_ROOT}/ndk/${{ env.ANDROID_NDK_VERSION }}" >> $GITHUB_ENV
+          echo "ANDROID_AVD_HOME=${{ runner.temp }}" >> $GITHUB_ENV
+
           echo "ANDROID_NDK_LATEST_HOME=$ANDROID_NDK_LATEST_HOME"
           ls -l $ANDROID_HOME/ndk
 
