Initial commit of AIX port (#1231)
This PR is for enabling AIX porting of onnxruntime_genai.

Below are detailed info.

- build.py
    Calling the util.is_aix() which is introduced for aix platform check
- cmake/global_variables.cmake
Updating the ONNXRUNTIME_LIB and adding check of CMAKE_SYSTEM_PROCESSOR
- cmake/ortlib.cmake
    Setting onnxruntime header path for ORT_HEADER_DIR
- examples/c/CMakeLists.txt
    Update for ONNXRUNTIME_GENAI_LIB and ONNXRUNTIME_GENAI_DEPENDENCY
- tools/python/util/__init__.py
   import is_aix
- tools/python/util/platform_helpers.py
    is_aix() for aix platform check.

--- a/examples/c/CMakeLists.txt
+++ b/examples/c/CMakeLists.txt
@@ -27,6 +27,9 @@ if(WIN32)
 elseif(APPLE)
   set(ONNXRUNTIME_GENAI_LIB "libonnxruntime-genai.dylib")
   set(ONNXRUNTIME_GENAI_DEPENDENCY "*.dylib")
+elseif(CMAKE_SYSTEM_NAME MATCHES "AIX")
+  set(ONNXRUNTIME_GENAI_LIB "libonnxruntime-genai.a")
+  set(ONNXRUNTIME_GENAI_DEPENDENCY "*.a")
 else()
   set(ONNXRUNTIME_GENAI_LIB "libonnxruntime-genai.so")
   set(ONNXRUNTIME_GENAI_DEPENDENCY "*.so")
